--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ header {
 main {
     display: grid;
     justify-content: space-between;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 1fr auto auto auto;
     grid-template-columns: repeat(3, 1fr);
     min-width: 100vw;
 }
