--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,7 @@ header {
     background-color: grey;
 }
 
+/* MAIN */
 main {
     display: flex;
     justify-content: center;
@@ -58,6 +59,31 @@ main {
     align-items: center;
     gap: 100px;
 }
+
+/* LIST */
+
+#logger {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#logger h2 {
+    align-self: self-start;
+    margin-left: 5%;
+}
+
+.sublist {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.2rem;
+    height: 40px;
+    width: 90%;
+
+    border-bottom: 1px solid black;
+    padding-top: 10px;
+}
+
 
 footer {
     margin-top: auto;
