--- a/styles/index.css
+++ b/styles/index.css
@@ -75,8 +75,9 @@ main {
 .sublist {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 1.2rem;
-    height: 40px;
+    height: 50px;
     width: 100%;
 
     border-bottom: 1px solid black;
