--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,9 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100vw;
+    background-color: whitesmoke;
+    overflow-x: hidden;
 }
 
 header {
@@ -19,7 +22,7 @@ header {
     padding-left: 100px;
     height: 70px;
     /*change*/
-    background-color: grey;
+    background-color: #52B788;
 }
 
 /* MAIN */
@@ -27,6 +30,8 @@ main {
     display: flex;
     justify-content: center;
     gap: 50px;
+    width: 100vw;
+    padding: 80px 0;
     width: 100vw;
 }
 
@@ -39,14 +44,84 @@ main {
     width: 70vw;
 }
 
+/*FORMS*/
+
 .budget,
 .expense,
-.iterniary {
+#destination {
     width: 300px;
-    height: 250px;
-    border: 1px solid black;
+    height: 215px;
+    border-radius: 12px;
+    box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    padding: 20px 0;
 }
 
+.budget:hover,
+.expense:hover,
+#destination:hover,
+#logger:hover {
+    box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 1);
+}
+
+.budget>h3,
+.expense>h3,
+#destination>h3 {
+    align-self: flex-start;
+    padding-left: 30px;
+}
+
+#destination-form,
+#budget-form,
+#expenses-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 80%;
+}
+
+#destination-form input,
+#budget-form input,
+#expenses-form input {
+    width: 100%;
+    height: 35px;
+    background-color: white;
+    border: 1px solid rgb(82, 183, 136, 0.6);
+    border-radius: 8px;
+    padding-left: 5px;
+    padding-right: 3px;
+}
+
+#destination-form input[type="date"] {
+    width: 49%;
+}
+
+#expenses-form div {
+    width: 100%;
+}
+
+form>button {
+    width: 80%;
+    height: 35px;
+    margin-top: 5px;
+    border-radius: 8px;
+    border: none;
+    background-color: #B7E4C7;
+}
+
+form>button:hover {
+    background-color: #52B788;
+}
+
+.budget-form>button {
+    width: 60%;
+}
+
+/* DESTINATION LOG */
 #dest-log,
 #logger,
 #budget-log {
@@ -66,6 +141,9 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 12px;
+    box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
+    padding: 20px;
 }
 
 #logger h2 {
@@ -73,8 +151,8 @@ main {
 }
 
 .sublist {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     font-size: 1.2rem;
     height: 50px;
@@ -82,6 +160,25 @@ main {
 
     border-bottom: 1px solid black;
     padding-top: 10px;
+}
+
+.sub-amount {
+    width: 100px;
+    justify-self: center;
+}
+
+.sublist>div {
+    justify-self: end;
+    padding-right: 20px;
+}
+
+.sublist button {
+    background-color: inherit;
+    border: none;
+}
+
+.sublist button>img:hover {
+    scale: 1.1;
 }
 
 
@@ -93,5 +190,5 @@ footer {
     justify-content: center;
     align-items: center;
     /*change*/
-    background-color: grey;
+    background-color: #52B788;
 }
