--- a/styles/index.css
+++ b/styles/index.css
@@ -4,8 +4,6 @@
     box-sizing: border-box;
 }
 
-:root {}
-
 body {
     display: flex;
     flex-direction: column;
@@ -21,7 +19,6 @@ header {
     align-items: center;
     padding-left: 100px;
     height: 70px;
-    /*change*/
     background-color: #52B788;
 }
 
@@ -224,6 +221,46 @@ form>button:hover {
     height: 12px;
     background-color: white;
     border-radius: 6px;
+}
+
+/* DIALOG */
+:modal {
+    position: fixed;
+    top: 25%;
+    left: 42%;
+    width: 280px;
+    height: 300px;
+    border-radius: 12px;
+    box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding: 20px 0;
+    border: none;
+}
+
+#edit-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 80%;
+}
+
+#edit-form div input {
+    width: 100%;
+    height: 35px;
+    background-color: white;
+    border: 1px solid rgb(82, 183, 136, 0.6);
+    border-radius: 8px;
+    padding-left: 5px;
+    padding-right: 3px;
+}
+
+#edit-form div {
+    width: 80%;
 }
 
 footer {
