--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Caveat:wght@400..700&family=Enriqueta:wght@400;500;600;700&family=Indie+Flower&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+:root {
+    --font-log: "Indie Flower", cursive;
+    --font-headers: "Enriqueta", serif;
+    --font: "Bellota Text", sans-serif;
 }
 
 body {
@@ -20,15 +28,18 @@ header {
     padding-left: 100px;
     height: 70px;
     background-color: #52B788;
+    font-family: var(--font-log);
+    font-size: 1.5rem;
+    color: #D8F3DC;
 }
 
 /* MAIN */
 main {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 70px;
     width: 100vw;
-    padding: 80px 0;
+    padding: 40px 0 80px 0;
     width: 100vw;
 }
 
@@ -69,6 +80,10 @@ main {
 #destination>h3 {
     align-self: flex-start;
     padding-left: 30px;
+    font-family: var(--font-headers);
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: #081C15;
 }
 
 #destination-form,
@@ -91,6 +106,9 @@ main {
     border-radius: 8px;
     padding-left: 5px;
     padding-right: 3px;
+    font-family: var(--font);
+    font-size: 0.95rem;
+    font-weight: 600;
 }
 
 #destination-form input[type="date"] {
@@ -108,6 +126,10 @@ form>button {
     border-radius: 8px;
     border: none;
     background-color: #B7E4C7;
+    font-family: var(--font-headers);
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #081C15;
 }
 
 form>button:hover {
@@ -138,7 +160,10 @@ form>button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 100px;
+    gap: 80px;
+    font-family: var(--font);
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 /* LIST */
@@ -150,10 +175,15 @@ form>button:hover {
     border-radius: 12px;
     box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
     padding: 20px;
+    margin-top: 40px;
 }
 
 #logger h2 {
     align-self: self-start;
+    font-family: var(--font-headers);
+    font-size: 2rem;
+    font-weight: 600;
+    color: #081C15;
 }
 
 .sublist {
@@ -163,6 +193,10 @@ form>button:hover {
     font-size: 1.2rem;
     height: 50px;
     width: 100%;
+    font-family: var(--font);
+    font-size: 1.5rem;
+    font-weight: 600;
+
 
     border-bottom: 1px solid black;
     padding-top: 10px;
@@ -203,6 +237,9 @@ form>button:hover {
     border: none;
     background-color: #B7E4C7;
     box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
+    font-family: var(--font);
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 #budget-log:hover {
@@ -270,4 +307,7 @@ footer {
     justify-content: center;
     align-items: center;
     background-color: #52B788;
+    font-family: var(--font);
+    font-size: 1.2rem;
+    font-weight: 600;
 }
