--- a/styles/index.css
+++ b/styles/index.css
@@ -157,6 +157,9 @@ form>button:hover {
 }
 
 #dest-log {
+    justify-self: center;
+    padding: 10px 0;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,6 +167,16 @@ form>button:hover {
     font-family: var(--font);
     font-size: 1.5rem;
     font-weight: 600;
+    text-align: center;
+    border-radius: 12px;
+    border: none;
+    background-color: #B7E4C7;
+    box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
+}
+
+#dest-log p {
+    font-size: 1.2rem;
+
 }
 
 /* LIST */
