--- a/styles/index.css
+++ b/styles/index.css
@@ -278,8 +278,8 @@ form>button:hover {
     position: fixed;
     top: 25%;
     left: 42%;
-    width: 280px;
-    height: 300px;
+    width: 300px;
+    height: 250px;
     border-radius: 12px;
     box-shadow: 0px 7px 18px -1px rgba(45, 106, 79, 0.33);
     display: flex;
@@ -297,6 +297,12 @@ form>button:hover {
     align-items: center;
     gap: 10px;
     width: 80%;
+}
+
+#edit-form h3 {
+    font-family: var(--font);
+    font-size: 2rem;
+    font-weight: 600;
 }
 
 #edit-form div input {
