--- a/styles/index.css
+++ b/styles/index.css
@@ -330,3 +330,112 @@ footer {
     font-size: 1.2rem;
     font-weight: 600;
 }
+
+@media only screen and (max-width: 660px) {
+    header {
+        justify-content: center;
+        padding-left: 0;
+    }
+
+    main {
+        width: 100vw;
+        gap: 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        column-gap: 0;
+        row-gap: 0;
+        gap: 30px;
+        width: 100%;
+    }
+
+    #dest-log {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    #logger {
+        width: 90%;
+        padding: 20px;
+    }
+
+    .sublist img {
+        font-size: 1rem;
+    }
+
+    .sublist {
+        height: 80px;
+        grid-template-rows: repeat(3, 0.5fr);
+        font-size: 1.2rem;
+        width: 80%;
+
+    }
+
+    .sub-amount {
+        width: auto;
+    }
+
+    .sublist>div {
+        padding-right: 0;
+    }
+
+    #budget-log {
+        width: 70%;
+    }
+
+    footer {
+        font-size: 0.8rem;
+    }
+}
+
+@media only screen and (min-width: 661px) and (max-width: 1224px) {
+
+    header {
+        padding-left: 50px;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        column-gap: 0;
+        row-gap: 0;
+        gap: 30px;
+        width: 100%;
+    }
+
+    #dest-log {
+        width: 80%;
+        gap: 20px;
+    }
+
+    #logger {
+        width: 90%;
+        padding: 5px;
+    }
+
+    .sublist>div {
+        justify-self: end;
+        padding-right: 0px;
+        border: 1px solid black;
+        display: flex;
+        justify-content: center;
+    }
+
+    .sublist div img {
+        padding: 0;
+        margin: 0;
+        border: 1px solid red;
+    }
+
+
+    #budget-log {
+        width: 60%;
+    }
+}
