--- a/styles/index.css
+++ b/styles/index.css
@@ -413,6 +413,7 @@ footer {
         align-items: center;
         column-gap: 0;
         row-gap: 0;
+
         gap: 30px;
         width: 100%;
     }
@@ -424,21 +425,19 @@ footer {
 
     #logger {
         width: 90%;
-        padding: 5px;
+        padding: 15px;
     }
 
     .sublist>div {
         justify-self: end;
-        padding-right: 0px;
-        border: 1px solid black;
+        padding-right: 5px;
         display: flex;
         justify-content: center;
     }
 
     .sublist div img {
         padding: 0;
-        margin: 0;
-        border: 1px solid red;
+        margin-right: 10px !important;
     }
 
 
